# mempipe

./: README.md  env.yml  pyproject.toml  setup.py  tests.py
.github/workflows/: publish.yml
mempipe/: __init__.py  mempipe.py
tests/: conftest.py  test2.py  test3.py  test3_deferred.py  test_basic.py  test_dtypes_and_shapes.py  test_multiprocess.py  test_passthrough.py  test_poll.py
