[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempipe"
version = "0.2.0"
description = "Pipe-like API over multiprocessing.shared_memory for fast numpy array transfer between processes."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["mempipe"]
