[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempipe"
version = "0.3.1"
description = "Pipe-like API over multiprocessing.shared_memory for fast numpy array transfer between processes."
authors = [{ name = "Mostafa Safaie", email = "mostafa.safaie@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
[project.urls]
Homepage = "https://github.com/AtMostafa/mempipe"
[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["mempipe"]
